create: section banner

--- a/src/sass/_setting.sass
+++ b/src/sass/_setting.sass
@@ -7,3 +7,18 @@
  src : url("../fonts/azbuka04.woff") format('woff')
  font-weight: normal
  font-style: 400
+body
+ font-family: azbuka04
+.container
+ width: 1200px
+ margin: auto
+.button
+ width: 200px
+ height: 45px
+ border: 1px solid #6E7547
+ background-color: transparent
+ font-family: 'Inter'
+ font-style: normal
+ font-weight: 500
+ font-size: 20px
+ line-height: 24px
