--- a/src/sass/blocks/_banner.sass
+++ b/src/sass/blocks/_banner.sass
@@ -1,2 +1,58 @@
-body 
- background-color: #c50c0c
+.banner 
+ &__about
+  max-width: 670px
+  padding-top: 84px
+  &-title
+   display: flex
+   &-dark
+    font-style: normal
+    font-weight: 400
+    font-size: 70px
+    line-height: 76px
+    margin: 0
+    margin-bottom: 37px
+    margin-right: 15px
+   &-primary
+    font-style: normal
+    font-weight: 400
+    font-size: 70px
+    line-height: 76px
+    margin: 0
+    margin-bottom: 37px
+    color: $primary
+  &-text
+    font-style: normal
+    font-weight: 400
+    font-size: 24px
+    line-height: 150%
+    margin-top: 0
+    margin-bottom: 40px
+  &-garden
+   position: relative
+   left: 321px
+   top: 61px
+ &__buttons
+  margin-bottom: 61px 
+  &-reservation
+   background-color: $primary
+   color: #ffffff
+   margin-right: 20px
+  &-detail
+   color: $primary
+ &__garden
+  position: relative
+  left: 306px
+.wrapper
+ display: flex
+ justify-content: space-between
+
+ 
+
+
+
+
+
+
+
+
+
