--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -8,6 +8,7 @@
     padding: 20px 0
     display: flex
     align-items: center
+    margin-bottom: 81px
   &__link
     color: $text-color
     text-decoration: none
