--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -9,6 +9,27 @@
   font-weight: normal;
   font-style: 400;
 }
+body {
+  font-family: azbuka04;
+}
+
+.container {
+  width: 1200px;
+  margin: auto;
+}
+
+.button {
+  width: 200px;
+  height: 45px;
+  border: 1px solid #6E7547;
+  background-color: transparent;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -330,6 +351,7 @@ template {
   padding: 20px 0;
   display: flex;
   align-items: center;
+  margin-bottom: 81px;
 }
 .header__link {
   color: #212121;
@@ -358,4 +380,63 @@ template {
 }
 .header__navigation-item:last-child {
   margin-right: 0;
+}
+
+.banner__about {
+  max-width: 670px;
+  padding-top: 84px;
+}
+.banner__about-title {
+  display: flex;
+}
+.banner__about-title-dark {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 76px;
+  margin: 0;
+  margin-bottom: 37px;
+  margin-right: 15px;
+}
+.banner__about-title-primary {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 76px;
+  margin: 0;
+  margin-bottom: 37px;
+  color: #6E7547;
+}
+.banner__about-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 150%;
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+.banner__about-garden {
+  position: relative;
+  left: 321px;
+  top: 61px;
+}
+.banner__buttons {
+  margin-bottom: 61px;
+}
+.banner__buttons-reservation {
+  background-color: #6E7547;
+  color: #ffffff;
+  margin-right: 20px;
+}
+.banner__buttons-detail {
+  color: #6E7547;
+}
+.banner__garden {
+  position: relative;
+  left: 306px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
