--- a/src/sass/blocks/_banner.sass
+++ b/src/sass/blocks/_banner.sass
@@ -2,6 +2,7 @@
  &__about
   max-width: 670px
   padding-top: 84px
+  height: 699px
   &-title
    display: flex
    &-dark
@@ -28,9 +29,11 @@
     margin-top: 0
     margin-bottom: 40px
   &-garden
-   position: relative
-   left: 321px
-   top: 61px
+    position: relative
+    left: 321px
+    top: 61px
+    &-image
+      position: relative
  &__buttons
   margin-bottom: 61px 
   &-reservation
@@ -39,20 +42,11 @@
    margin-right: 20px
   &-detail
    color: $primary
- &__garden
-  position: relative
-  left: 306px
+  &-showcase
+    width: 446px
+    height: 639px
 .wrapper
  display: flex
  justify-content: space-between
-
- 
-
-
-
-
-
-
-
 
 
