--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -385,6 +385,7 @@ template {
 .banner__about {
   max-width: 670px;
   padding-top: 84px;
+  height: 699px;
 }
 .banner__about-title {
   display: flex;
@@ -420,6 +421,9 @@ template {
   left: 321px;
   top: 61px;
 }
+.banner__about-garden-image {
+  position: relative;
+}
 .banner__buttons {
   margin-bottom: 61px;
 }
@@ -431,12 +435,53 @@ template {
 .banner__buttons-detail {
   color: #6E7547;
 }
-.banner__garden {
-  position: relative;
-  left: 306px;
+.banner__buttons-showcase {
+  width: 446px;
+  height: 639px;
 }
 
 .wrapper {
   display: flex;
   justify-content: space-between;
+}
+
+.advantages {
+  padding-top: 160px;
+  padding-bottom: 156px;
+}
+.advantages__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 43px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+.advantages__info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  width: 386px;
+}
+.card-image {
+  width: 386px;
+  height: 380px;
+  margin-bottom: 25px;
+}
+.card-title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+.card-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
 }/*# sourceMappingURL=style.css.map */
