--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -447,7 +447,7 @@ template {
 
 .advantages {
   padding-top: 160px;
-  padding-bottom: 156px;
+  padding-bottom: 160px;
 }
 .advantages__title {
   font-style: normal;
@@ -484,4 +484,28 @@ template {
   font-weight: 400;
   font-size: 17px;
   line-height: 150%;
+}
+
+.grow {
+  background-color: #FCF8F0;
+  padding-top: 145px;
+  padding-bottom: 129px;
+}
+.grow__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 43px;
+  text-align: center;
+  padding-bottom: 63px;
+}
+.grow__image {
+  width: 1216px;
+  height: 700px;
+  margin: auto;
+}
+.grow__image-vegitables {
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: darken;
 }/*# sourceMappingURL=style.css.map */
