create: contacts; poduct; rewiew

--- a/src/sass/blocks/_advantages.sass
+++ b/src/sass/blocks/_advantages.sass
@@ -9,6 +9,7 @@
   text-align: center
   margin-top: 0
   margin-bottom: 60px
+  color: $text-color
  &__info
   display: flex
   justify-content: space-between
