--- a/src/sass/blocks/_grow.sass
+++ b/src/sass/blocks/_grow.sass
@@ -8,7 +8,9 @@
   font-size: 40px
   line-height: 43px
   text-align: center
-  padding-bottom: 63px
+  margin-top: 0
+  margin-bottom: 63px
+  color: $text-color
  &__image
   width: 1216px
   height: 700px
