--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
 .header
   width: 100%
-  background-color:  #FCF8F0
+  background-color: $secondary
   &__wrapper
     max-width: 1200px
     max-height: 90px
