--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,4 +5,7 @@
 @import "blocks/banner"
 @import "blocks/advantages"
 @import "blocks/grow"
+@import "blocks/products"
+@import "blocks/reviews"
+@import "blocks/contact"
 @import "media"
