--- a/src/sass/blocks/_contact.sass
+++ b/src/sass/blocks/_contact.sass
@@ -1,4 +1,5 @@
 .contact
+ margin-bottom: 170px
  &__title
   font-style: normal
   font-weight: 400
@@ -61,6 +62,7 @@
   width: 60px
   height: 18px
   left: 87%
+  cursor: pointer
 
 
    
