--- a/src/sass/blocks/_grow.sass
+++ b/src/sass/blocks/_grow.sass
@@ -12,8 +12,7 @@
   margin-bottom: 63px
   color: $text-color
  &__image
-  width: 1216px
-  height: 700px
+  width: 100%
   margin: auto
   &-vegitables
    width: 100%
