--- a/src/sass/blocks/_products.sass
+++ b/src/sass/blocks/_products.sass
@@ -1,51 +1,69 @@
 .products
- padding-top: 170px
- padding-bottom: 100px
- &__title
-  font-style: normal
-  font-weight: 400
-  font-size: 40px
-  line-height: 43px
-  color: $text-color
-  margin-bottom: 60px
-  margin-top: 0
-  text-align: center
- &__cards
-  display: flex
-  justify-content: space-between
-  flex-wrap: wrap
- &__card
-  display: flex
-  flex-wrap: wrap
-  flex-direction: column
-  margin-bottom: 30px
-  &-image 
-   display: block
-   margin-bottom: 20px
-  &-name
-   flex-wrap: wrap
-   font-family: 'Inter'
-   font-style: normal
-   font-weight: 500
-   font-size: 20px
-   line-height: 24px
-   margin-bottom: 10px
-   color: black
-  &-price
-   flex-basis: 100%
-   margin-bottom: 6px
-   font-style: normal
-   font-weight: 400
-   font-size: 17px
-   line-height: 18px
-   color: #000
-   opacity: 0.6
- &__button
-  background-color: $primary
-  color: #FFFFFF
-  display: block
-  margin: auto
-  cursor: pointer
- &__link
-  text-decoration: none
-  cursor: pointer
+  padding-top: 170px
+  padding-bottom: 100px
+  &__title
+    font-style: normal
+    font-weight: 400
+    font-size: 40px
+    line-height: 43px
+    color: $text-color
+    margin-bottom: 60px
+    margin-top: 0
+    text-align: center
+  &__cards
+    display: grid
+    grid-template-columns: repeat(8, 1fr)
+    grid-template-rows: repeat(2, 1fr)
+    grid-gap: 30px
+    cursor: pointer
+    margin-bottom: 30px
+  &__card
+    width: 100%
+    display: flex
+    flex-direction: column
+    flex-wrap: wrap
+    margin-bottom: 0
+    text-decoration: none
+    color: #000
+    &-1
+      grid-column: 1 / 5
+    &-2
+      grid-column: 5 / 7
+    &-3
+      grid-column: 7 / 9
+    &-4
+      grid-column: 1 / 3
+    &-5
+      grid-column: 3 / 5
+    &-6
+      grid-column: 5 / 9
+    &-image 
+      display: block
+      margin-bottom: 20px
+      width: 100%
+    &-name
+      flex-wrap: wrap
+      font-family: 'Inter'
+      font-style: normal
+      font-weight: 500
+      font-size: 20px
+      line-height: 24px
+      margin-bottom: 10px
+      color: black
+    &-price
+      font-style: normal
+      font-weight: 400
+      font-size: 17px
+      line-height: 18px
+      color: #000
+      opacity: 0.6
+      margin-bottom: 0
+  &__button
+    background-color: $primary
+    color: #FFFFFF
+    display: block
+    margin: auto
+    cursor: pointer
+  &__link
+    text-decoration: none
+    cursor: pointer
