added: media max-width 1200px

--- a/src/sass/blocks/_reviews.sass
+++ b/src/sass/blocks/_reviews.sass
@@ -45,7 +45,8 @@
       margin-top: 0
       margin-right: 0
     &-name
-      margin-left: 437px
+      float: right
+      margin-left: 0
       font-style: normal
       font-weight: 400
       font-size: 17px
