--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -35,6 +35,10 @@
         width: 400px
         &-image
           width: 100%
+          top: 0
+          right: 0
+          bottom: 0
+          left: 0
     &__showcase
       width: 400px
       &-image
@@ -47,7 +51,6 @@
     &__title
       margin-bottom: 50px
     &__card
-      width: 32%
       &-image
         margin-bottom: 25px
       &-title
@@ -101,8 +104,7 @@
     &__questions
       width: 500px
   .footer
-    background-color: $secondary
-    padding: 50px 0
+    padding: 70px 0
     &__contact
       font-size: 22px
       &-item
@@ -169,19 +171,16 @@
   .buttons
     margin-bottom: 20px
   .advantages
-    padding-bottom: 50px
     &__card
-      width: 32%
       &-image
-        margin-bottom: 10px
-        width: 100%
+        margin-bottom: 15px
       &-title
         font-size: 15px
+        display: block
         margin-bottom: 10px
       &-text
         margin: 0
         font-size: 14px
-        line-height: 150%
   .grow
     padding-top: 50px
     padding-bottom: 50px
@@ -191,10 +190,10 @@
     &__card
       margin-bottom: 15px
       &-image 
-        margin-bottom: 10px
+        margin-bottom: 15px
       &-name
         font-size: 14px
-        margin-bottom: 7px
+        margin-bottom: 10px
       &-price
         font-size: 15px
     &__button
@@ -240,4 +239,92 @@
         width: 30px
         height: 30px
 @media (max-width: 980px)
+  .container
+      width: 729px
+  .header
+    &__wrapper
+      margin-bottom: 75px
+    &__navigation
+      display: none
+    &__shopping
+      display: none
+  .menu
+    &-button
+      display: flex
+      width: 40px
+      height: 40px
+      align-items: center
+      justify-content: center
+      background-color: $primary
+      border-radius: 50%
+      flex-direction: column
+      border: none
+      cursor: pointer
+      &__line
+        margin-bottom: 6px
+        width: 22px
+        height: 1px
+        background-color: white
+      &__line:last-child
+        margin-bottom: 0
+  .banner
+    &__about
+      min-width: 100%
+      padding-top: 0
+      padding-bottom: 100px
+      &-title
+        display: flex
+        &-dark
+          font-style: normal
+          font-weight: 400
+          font-size: 70px
+          line-height: 76px
+          white-space: nowrap
+        &-primary   
+          font-style: normal
+          font-weight: 400
+          font-size: 70px
+          line-height: 76px
+      &-text
+        font-size: 24px
+        line-height: 150%
+        margin-bottom: 20px
+      &-garden
+        left: 0
+        margin-left: auto
+        width: 478px
+    &__showcase
+      display: none
+  .wrapper
+    width: 100%
+    display: block
+  .buttons
+    margin-bottom: 51px
+  .advantages
+    &__title
+      font-size: 40px
+      line-height: 43px
+      margin-bottom: 60px
+    &__info
+      grid-template-columns: 1fr
+      grid-template-rows: repeat(3, 1fr)
+      grid-gap: 50px
+    &__card
+      &-image
+        display: none
+        &--media
+          display: block
+          margin-bottom: 25px
+      &-title 
+        font-size: 20px
+        line-height: 150%
+        margin-bottom: 10px
+      &-text
+        font-size: 17px
+        line-height: 150%
+
+
+
+      
+
   
