--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -383,6 +383,10 @@ template {
   margin-right: 0;
 }
 
+.menu-button {
+  display: none;
+}
+
 .banner__about {
   max-width: 670px;
   padding-top: 84px;
@@ -466,7 +470,7 @@ template {
 }
 
 .advantages {
-  padding-top: 160px;
+  padding: 160px 0;
 }
 .advantages__title {
   font-style: normal;
@@ -479,15 +483,19 @@ template {
   color: #212121;
 }
 .advantages__info {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
 }
 .advantages__card {
-  width: 386px;
+  width: 100%;
 }
 .advantages__card-image {
   width: 100%;
   margin-bottom: 25px;
+}
+.advantages__card-image--media {
+  display: none;
 }
 .advantages__card-title {
   font-family: "Inter";
@@ -502,6 +510,7 @@ template {
   font-weight: 400;
   font-size: 17px;
   line-height: 150%;
+  opacity: 0.6;
 }
 
 .grow {
@@ -888,6 +897,10 @@ template {
   }
   .banner__about-garden-image {
     width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
   .banner__showcase {
     width: 400px;
@@ -904,9 +917,6 @@ template {
   }
   .advantages__title {
     margin-bottom: 50px;
-  }
-  .advantages__card {
-    width: 32%;
   }
   .advantages__card-image {
     margin-bottom: 25px;
@@ -975,8 +985,7 @@ template {
     width: 500px;
   }
   .footer {
-    background-color: #FCF8F0;
-    padding: 50px 0;
+    padding: 70px 0;
   }
   .footer__contact {
     font-size: 22px;
@@ -1062,24 +1071,17 @@ template {
   .buttons {
     margin-bottom: 20px;
   }
-  .advantages {
-    padding-bottom: 50px;
-  }
-  .advantages__card {
-    width: 32%;
-  }
   .advantages__card-image {
-    margin-bottom: 10px;
-    width: 100%;
+    margin-bottom: 15px;
   }
   .advantages__card-title {
     font-size: 15px;
+    display: block;
     margin-bottom: 10px;
   }
   .advantages__card-text {
     margin: 0;
     font-size: 14px;
-    line-height: 150%;
   }
   .grow {
     padding-top: 50px;
@@ -1093,11 +1095,11 @@ template {
     margin-bottom: 15px;
   }
   .products__card-image {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   .products__card-name {
     font-size: 14px;
-    margin-bottom: 7px;
+    margin-bottom: 10px;
   }
   .products__card-price {
     font-size: 15px;
@@ -1158,5 +1160,107 @@ template {
   .footer__social-telegram {
     width: 30px;
     height: 30px;
+  }
+}
+@media (max-width: 980px) {
+  .container {
+    width: 729px;
+  }
+  .header__wrapper {
+    margin-bottom: 75px;
+  }
+  .header__navigation {
+    display: none;
+  }
+  .header__shopping {
+    display: none;
+  }
+  .menu-button {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    background-color: #6E7547;
+    border-radius: 50%;
+    flex-direction: column;
+    border: none;
+    cursor: pointer;
+  }
+  .menu-button__line {
+    margin-bottom: 6px;
+    width: 22px;
+    height: 1px;
+    background-color: white;
+  }
+  .menu-button__line:last-child {
+    margin-bottom: 0;
+  }
+  .banner__about {
+    min-width: 100%;
+    padding-top: 0;
+    padding-bottom: 100px;
+  }
+  .banner__about-title {
+    display: flex;
+  }
+  .banner__about-title-dark {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 70px;
+    line-height: 76px;
+    white-space: nowrap;
+  }
+  .banner__about-title-primary {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 70px;
+    line-height: 76px;
+  }
+  .banner__about-text {
+    font-size: 24px;
+    line-height: 150%;
+    margin-bottom: 20px;
+  }
+  .banner__about-garden {
+    left: 0;
+    margin-left: auto;
+    width: 478px;
+  }
+  .banner__showcase {
+    display: none;
+  }
+  .wrapper {
+    width: 100%;
+    display: block;
+  }
+  .buttons {
+    margin-bottom: 51px;
+  }
+  .advantages__title {
+    font-size: 40px;
+    line-height: 43px;
+    margin-bottom: 60px;
+  }
+  .advantages__info {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 50px;
+  }
+  .advantages__card-image {
+    display: none;
+  }
+  .advantages__card-image--media {
+    display: block;
+    margin-bottom: 25px;
+  }
+  .advantages__card-title {
+    font-size: 20px;
+    line-height: 150%;
+    margin-bottom: 10px;
+  }
+  .advantages__card-text {
+    font-size: 17px;
+    line-height: 150%;
   }
 }/*# sourceMappingURL=style.css.map */
