--- a/src/sass/blocks/_products.sass
+++ b/src/sass/blocks/_products.sass
@@ -58,6 +58,8 @@
       color: #000
       opacity: 0.6
       margin-bottom: 0
+  &__swiper
+    display: none
   &__button
     background-color: $primary
     color: #FFFFFF
