--- a/src/sass/blocks/_reviews.sass
+++ b/src/sass/blocks/_reviews.sass
@@ -21,6 +21,8 @@
     overflow: hidden
     &-image 
       width: 100%
+    &-media 
+      display: none
   &__text
     margin-left: 67px
     width: 526px
@@ -46,11 +48,12 @@
       margin-right: 0
     &-name
       float: right
-      margin-left: 0
       font-style: normal
       font-weight: 400
       font-size: 17px
       line-height: 150%
+  &__pagination
+    display: none
   &__swiper
     width: 100%
     overflow: hidden
