--- a/src/sass/blocks/_reviews.sass
+++ b/src/sass/blocks/_reviews.sass
@@ -65,6 +65,7 @@
       justify-content: space-between
       margin: auto
       width: 140px
+      z-index: 1
       &-prev
         position: relative
         width: 60px
