--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -425,6 +425,7 @@ template {
   position: relative;
   left: 161px;
   top: 61px;
+  z-index: -7;
 }
 .banner__about-garden-image {
   position: relative;
@@ -448,12 +449,14 @@ template {
   color: #6E7547;
 }
 .banner__buttons__showcase {
-  position: relative;
+  position: absolute;
   width: 446px;
   height: 639px;
+  right: 0;
+  top: 0;
 }
 .banner__buttons__showcase-image {
-  position: relative;
+  position: absolute;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -705,6 +708,7 @@ template {
   justify-content: space-between;
   margin: auto;
   width: 140px;
+  z-index: 1;
 }
 .reviews__swiper-button-prev {
   position: relative;
@@ -860,6 +864,105 @@ template {
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 20px;
+}
+
+.modal {
+  display: none;
+}
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+  transition: opacity 0.2s;
+}
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  max-width: 1010px;
+  width: 95%;
+  height: 386px;
+  background-color: #FFFFFF;
+  transform: translate(-50%, -50%);
+  z-index: 101;
+}
+.modal__close {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal__card-image {
+  position: absolute;
+  width: 386px;
+  height: 386px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+.modal__card-info {
+  display: flex;
+  margin-left: 446px;
+  flex-direction: column;
+}
+.modal__card-title {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 43px;
+  color: #212121;
+  margin-bottom: 30px;
+  margin-top: 54px;
+}
+.modal__card-text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 150%;
+  width: 499px;
+  opacity: 0.6;
+}
+.modal__card-button {
+  display: flex;
+  align-items: center;
+}
+.modal__button {
+  background-color: #6E7547;
+  color: #fff;
+  height: 40px;
+}
+
+.product-counter {
+  display: flex;
+  margin-right: 20px;
+}
+
+.counter-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #212121;
+  background-color: transparent;
+  cursor: pointer;
+}
+.counter-number {
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #212121;
+  border-left: none;
+  border-right: none;
+}
+
+.open {
+  display: flex;
 }
 
 @media (max-width: 1492px) {
